<resources>

  <string name="app_name" translatable="false">PCast Demo</string>

  <string name="action_settings">Settings</string>
  <string name="let_stream">Let\'s stream!</string>
  <string name="permissions_denied">Some permissions were denied</string>
  <string name="action_filter_stream">Select stream</string>
  <string name="mode_real_time">Real-time</string>
  <string name="mode_live">Live</string>
  <string name="mode_broadcast">Broadcast</string>
  <string name="stop_video_pub">The publisher stopped. %1$s</string>
  <string name="stop_video_no_token">Unable to obtain stream token. Please try again.</string>
  <string name="this_phone">%1$s (this device)</string>
  <string name="version">v%1$s</string>
  <string name="render_error">Error: %1$s</string>
  <string name="media_null">Could not get user media</string>
  <string name="please_try">Please try again</string>
  <string name="list_null">List streams return null</string>
  <string name="no_screen_capture_device">Screen capture device not found</string>
  <string name="quality_pubs">Data quality status for publishing:</string>
  <string name="quality_views">Data quality status for viewing:</string>
  <string name="none">None</string>
  <string name="upload_limit">Upload limited</string>
  <string name="download_limit">Download limited</string>
  <string name="pub_limit">Publisher limited</string>
  <string name="network_limit">Network limited</string>
  <string name="notification_share_title">Share screen</string>
  <string name="notification_share_subtitle">Touch the to open home</string>
  <string name="phenix_log_file_name">PhenixLog.txt</string>
  <string name="phenix_log_share_subject">Phenix Log File</string>
  <string name="phenix_log_share_title">Share Phenix Log File</string>
  <string name="server_address">Server address:</string>
  <string name="pcast_address">PCast address:</string>
  <string name="list_server">Server List: </string>
  <string name="list_manual">Manual</string>
  <string name="list_anycast">Anycast (Closest Data Center)</string>
  <string name="list_au_southeast">AU Southeast</string>
  <string name="list_apac_east">APAC East</string>
  <string name="list_apac_northeast">APAC Northeast</string>
  <string name="list_apac_southeast">APAC Southeast</string>
  <string name="list_eu_central">EU Central</string>
  <string name="list_eu_west">EU West</string>
  <string name="list_uk_southeast">UK Southeast</string>
  <string name="list_sa_east">SA East</string>
  <string name="list_us_northeast">US Northeast</string>
  <string name="list_us_east">US East</string>
  <string name="list_us_central">US Central</string>
  <string name="list_us_west">US West</string>

  <string name="list_anycast_staging">Anycast - Staging</string>
  <string name="list_us_central_staging">US Central - Staging</string>
  <string name="list_eu_west_staging">EU West - Staging</string>
  <string name="list_anycast_local">Anycast - Local</string>
  <string name="list_local">Local</string>
  <string name="unable">Unable to connect to server.</string>
  <string name="input_address">Please input a server address</string>
  <string name="email_log">Email Logs</string>
  <string name="font_robo_light">fonts/roboto_regular.ttf</string>

  <!-- MULTI_BITRATE -->
  <string name="mbr_dialog_title">Multi-bitrate support</string>
  <string name="mbr_dialog_message">With multi-bitrate support each subscriber receives a stream at the best possible bitrate and resolution.</string>
  <string name="mbr_abbreviation">MBR</string>
  <string name="enable">Enable</string>
  <string name="disable">Disable</string>

  <string-array name="server_array">
    <item>Manual</item>
    <item>Anycast (Closest Data Center)</item>
    <item>AU Southeast</item>
    <item>APAC East</item>
    <item>APAC Northeast</item>
    <item>APAC Southeast</item>
    <item>EU Central</item>
    <item>EU West</item>
    <item>UK Southeast</item>
    <item>SA East</item>
    <item>US Northeast</item>
    <item>US East</item>
    <item>US Central</item>
    <item>US West</item>
    <item>Anycast - Staging</item>
    <item>US Central - Staging</item>
    <item>EU West - Staging</item>
    <item>Anycast - Local</item>
    <item>Local</item>
  </string-array>
</resources>
