<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical"
  android:padding="8dp">

  <android.support.v7.widget.AppCompatButton
    android:id="@+id/buttonEmailLog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:text="@string/email_log"/>

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/list_server"
    android:textSize="13sp"/>

  <android.support.v7.widget.AppCompatSpinner
    android:id="@+id/spinner"
    android:layout_width="match_parent"
    android:layout_height="?actionBarSize"/>

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/server_address"
    android:textSize="13sp"/>

  <EditText
    android:id="@+id/editServerAddress"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:inputType="textUri"
    android:maxLines="1"
    android:text="https://demo.phenixp2p.com/demoApp/"
    android:textSize="13sp"/>

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:text="@string/pcast_address"
    android:textSize="13sp"/>

  <EditText
    android:id="@+id/editPcastAddress"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:inputType="textUri"
    android:maxLines="1"
    android:textSize="13sp"/>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <android.support.v7.widget.AppCompatButton
      android:id="@+id/buttonSubmit"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="Submit"/>

    <android.support.v7.widget.AppCompatButton
      android:id="@+id/buttonCancel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="Cancel"/>
  </LinearLayout>
</LinearLayout>