<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:background="@android:color/transparent"
  android:orientation="vertical">

  <android.support.v7.widget.CardView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="8dp"
    android:minHeight="165dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:cardBackgroundColor="@color/window"
    app:contentPadding="16dp">

    <RadioGroup
      android:id="@+id/radioGroup"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center">

      <RadioButton
        android:id="@+id/filter_real_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:minHeight="40dp"
        android:textSize="13sp"
        android:text="@string/mode_real_time"/>

      <RadioButton
        android:id="@+id/filter_broadcast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:minHeight="40dp"
        android:textSize="13sp"
        android:text="@string/mode_broadcast"/>

      <RadioButton
        android:id="@+id/filter_live"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:minHeight="40dp"
        android:textSize="13sp"
        android:text="@string/mode_live"/>
    </RadioGroup>
  </android.support.v7.widget.CardView>

</LinearLayout>